--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "prod": "node dist/src/server.js",
+    "dev": "nodemon src/server.ts",
+    "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
